# trilink-core

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.toml  deny.toml
.github/workflows/: auto-version-tag.yml  ci.yml  codeql.yml  dependency-review.yml  pages.yml  release.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/bridge/: sync.rs
app/src/egress/: mod.rs  semantic_map.rs
app/src/infer/: mod.rs  types.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/bridge/: mod.rs  unproject.rs
core/src/buffer/: mod.rs
core/src/ingress/: mock.rs
docs/: SUMMARY.md  architecture.md  assumptions.md  background.md  book.toml  contributing.md  limitations.md  math.md  roadmap.md  scenarios.md  strategy.md
src/: error.rs  lib.rs
src/bridge/: mod.rs  project.rs  unproject.rs
src/buffer/: mod.rs
src/ingress/: mock.rs  mod.rs
tests/: heightmap_roundtrip.rs  project_unproject_roundtrip.rs
