[package]
name        = "trilink-core"
version     = "0.1.1"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Open-source core: pose buffer, unprojection math, and shared types for sensor-vision spatial fusion"

[lib]
name = "trilink_core"
path = "src/lib.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
thiserror  = "2"
glam       = { version = "0.32.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
