[package]
name        = "tri-link"
version     = "0.1.0"
edition     = "2021"
description = "Tri-Link integration bridge — enterprise binary"

[[bin]]
name = "trilink"
path = "src/main.rs"

[lib]
name = "trilink"
path = "src/lib.rs"

[features]
default = []
sqlite  = ["trilink-core/sqlite", "rusqlite"]

[dependencies]
trilink-core       = { path = "../core" }
tokio              = { version = "1",   features = ["full"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
rusqlite           = { version = "0.31", optional = true }
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap               = { version = "4",   features = ["derive"] }
toml               = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
