[package]
name        = "trilink-core"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Open-source core: pose buffer, unprojection math, and shared types for robot-vision integration"

[lib]
name = "trilink_core"
path = "src/lib.rs"

[features]
default = []
sqlite  = ["rusqlite"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
thiserror  = "2"
rusqlite   = { version = "0.31", optional = true }
